code25_all/swift/25799634.txt
let types = ["value1", "value2", "value3"]

class someClass {
    let type = String(arc4random_uniform(UInt32(types)))
}

Playground execution failed: <EXPR>:39:16: error: cannot invoke 'init' with an argument of type 'UInt32'
    let type = String(arc4random_uniform(UInt32(types)))
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
let types = ["value1", "value2", "value3"]

class someClass {
    let x = arc4random_uniform(UInt32(4))
    let type = types[x]
}

Playground execution failed: <EXPR>:39:22: error: 'BlogPost.Type' does not have a member named 'x'
    let type = types[x]
                     ^
